Fixing and standardizing z-indexes.

--- a/www.html5rocks.com/static/css/new.css
+++ b/www.html5rocks.com/static/css/new.css
@@ -336,7 +336,7 @@ header
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 200;
+  z-index: 10;
   -webkit-transition: box-shadow 0.6s linear;
   -moz-transition: box-shadow 0.6s linear;
   -o-transition: box-shadow 0.6s linear;
@@ -585,7 +585,7 @@ input[type="search"]::-webkit-search-results-decoration
   left: 50%;
   margin-left: -605px;
   top: 30px;
-  z-index: 999;
+  z-index: 2;
   padding: 20px;
   opacity: .85;
   -webkit-transition: opacity 600ms ease-in-out;
@@ -784,7 +784,7 @@ nav.paginator
   width: 100px;
   height: 250px;
   overflow: hidden;
-  z-index: 10;
+  z-index: 2;
 }
 
 nav.paginator ul
@@ -1160,10 +1160,9 @@ body[data-href='features-nuts_and_bolts'] .features_outline_nav_toggle
   margin-left: 555px;
   width: 30px;
   height: 30px;
-  z-index: 999;
   cursor: pointer !important;
   padding: 10px;
-  z-index: 20;
+  z-index: 3;
 }
 
 .features_outline_nav_toggle img {
@@ -1174,12 +1173,12 @@ body[data-href='features-nuts_and_bolts'] .features_outline_nav_toggle
   -moz-transition: all .25s ease-in-out;
   -o-transition: all .25s ease-in-out;
   transition: all .25s ease-in-out;
-  z-index: 100;
+  z-index: 4;
 }
 
 .features_outline_nav_toggle img.show
 {
-  z-index: 200;
+  z-index: 5;
 }
 
 .features_outline_nav_toggle.activated img.show
@@ -1206,6 +1205,7 @@ nav.features_outline {
   -moz-box-shadow: 0 0 10px 0 #bbb;
   box-shadow: 0 0 10px 0 #bbb;
   overflow: visible;
+  z-index: 3;
 }
 
 nav.features_outline h3
